integracion hateoas
